Fixed 'Log in' button on Navbar to align in center

--- a/frontend/src/components/site/Navbar.css
+++ b/frontend/src/components/site/Navbar.css
@@ -43,10 +43,8 @@ nav {
     font-weight: 500;
     font-style: medium; 
     font-size: 30px;
-    line-height: 100%;
     letter-spacing: 0%;
     color: #1E2E5E;
-    padding-bottom: 5px;
 }
 
 .navlinks a.active {
@@ -54,7 +52,10 @@ nav {
 }
 
 .log-in {
-    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 20px;
     background-color: #DCDACD;
-    border-radius: 20px;
+    border-radius: 40px;
 }
